Added more code ..

--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=MangoProductDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=MangoShoppingCartDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "JwtOptions": {
@@ -15,5 +15,9 @@
       "Issuer": "mango-auth-api",
       "Audience": "mango-client"
     }
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000",
+    "CouponAPI": "https://localhost:7001"
   }
 }
